problem saving/loading driver on shader node #68971

Closed
opened 2019-08-21 14:45:57 +02:00 by MACHIN3 · 11 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: daba3e871f

Short description of error
Adding a driver from one value of a shader node to another, works great using the new Copy As New Driver tool. But saving and loading the file again will invalidate the driver and the input variable's Prop will be empty.

video demo

problem_saving_or_loading_driver_on_shader_node.blend
problem_saving_or_loading_driver_on_shader_node_driven.blend

Exact steps for others to reproduce the error

  • load problem_saving_or_loading_driver_on_shader_node.blend
  • set up a driver linking two properties using Copy As New Driver
  • confirm its working
  • save and load the file
  • the driver is no longer working, as shown in problem_saving_or_loading_driver_on_shader_node_driven.blend
**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: `daba3e871f` **Short description of error** Adding a driver from one value of a shader node to another, works great using the new `Copy As New Driver` tool. But saving and loading the file again will invalidate the driver and the input variable's `Prop` will be empty. [video demo ](https://www.youtube.com/watch?v=uxWTfsj3wJw) [problem_saving_or_loading_driver_on_shader_node.blend](https://archive.blender.org/developer/F7680235/problem_saving_or_loading_driver_on_shader_node.blend) [problem_saving_or_loading_driver_on_shader_node_driven.blend](https://archive.blender.org/developer/F7680236/problem_saving_or_loading_driver_on_shader_node_driven.blend) **Exact steps for others to reproduce the error** * load problem_saving_or_loading_driver_on_shader_node.blend * set up a driver linking two properties using `Copy As New Driver` * confirm its working * save and load the file * the driver is no longer working, as shown in problem_saving_or_loading_driver_on_shader_node_driven.blend
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Member

Added subscribers: @angavrilov, @lichtwerk

Added subscribers: @angavrilov, @lichtwerk
Member

I recall other issues with data paths in Shader Nodetree .
@angavrilov : havent checked code, but this was a bit special, right?

I recall other issues with data paths in `Shader Nodetree `. @angavrilov : havent checked code, but this was a bit special, right?

This is probably caused by the node tree being not a real datablock - the reference to the tree in the driver is destroyed on save & load, and you can't even select the correct reference from the dropdown list if you try creating it manually.

This is probably caused by the node tree being not a real datablock - the reference to the tree in the driver is destroyed on save & load, and you can't even select the correct reference from the dropdown list if you try creating it manually.

This issue was referenced by 8f578150ea

This issue was referenced by 8f578150eaf494a03bed7389046e44f2bdf7d748

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Alexander Gavrilov self-assigned this 2019-08-22 14:52:59 +02:00

This issue was referenced by e6f3d8b3e1

This issue was referenced by e6f3d8b3e1158ebdc89ceae1de5ce7bc5c420f51

This issue was referenced by 34ed58dcaf

This issue was referenced by 34ed58dcaffd957f50380f4115d2cb9c46de31ee

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Reopening while we decide on the ideal way to fix this.

Reopening while we decide on the ideal way to fix this.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68971
No description provided.