source/blender/makesdna/DNA_node_types.h
@@ -477,6 +477,9 @@ typedef struct bNodeTree {
    */
   struct bNodeTreeExec *execdata;
 
+  /** Data block that owns this tree (Material, etc). Not saved. */
+  struct ID *owner;
+
   /* callbacks */
   void (*progress)(void *, float progress);
   /** \warning may be called by different threads */
